# SETproject

./: PROJECT_IDEA.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/src/app/: database.py  main.py  scheduler.py  settings.py
backend/src/app/data/: init.sql
backend/src/app/models/: game.py
backend/src/app/routers/: admin.py  games.py
backend/src/app/schemas/: auth.py  game.py
backend/src/app/services/: price_sync.py  pspricing.py
caddy/: Caddyfile
frontend-admin/: Dockerfile  package.json
frontend-admin/src/app/: globals.css  layout.tsx  page.tsx
frontend-user/: next.config.ts
frontend-user/src/app/: AuthNav.tsx  globals.css  layout.tsx
frontend-user/src/app/auth/login/: page.tsx
frontend-user/src/app/auth/register/: page.tsx
frontend-user/src/app/favorites/: page.tsx
frontend-user/src/app/games/: page.tsx
frontend-user/src/components/: NanobotWidget.tsx
mcp/mcp-games/: pyproject.toml
mcp/mcp-games/src/mcp_games/: __init__.py
nanobot/: Dockerfile  config.template.json  entrypoint.py  websocket_bridge.py
nanobot/workspace/: skill_prompt.md
