[project]
name = "mcp-games"
version = "0.1.0"
description = "MCP server for game catalog queries"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_games"]
